--- a/bridge.html
+++ b/bridge.html
@@ -1,113 +1,185 @@
-<script>
-const GS_ENDPOINT = 'https://script.google.com/macros/s/AKfycbxuCs7VB4t-iSbvv_PneUs0dA8wbB3GeUR2QmaNelUEU4IbGmkrhPr_QksIaZwlvkGA/exec';
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>BED Bridge</title>
+  <style>
+    html,body,iframe { height: 100%; width: 100%; margin: 0; border: 0; }
+    #status {
+      position: fixed; right: 10px; bottom: 10px;
+      padding: 8px 12px; border-radius: 6px;
+      font: 14px system-ui, sans-serif; display: none; z-index: 9999;
+    }
+    #status.ok { background:#d4edda; color:#155724; display:inline-block; }
+    #status.error { background:#f8d7da; color:#721c24; display:inline-block; }
+  </style>
+</head>
+<body>
+  <!-- Load your existing app -->
+  <iframe id="app" src="./index.html"></iframe>
+  <div id="status"></div>
 
-const $ = (s, r=document) => r.querySelector(s);
-const app = $('#app');
-const statusBox = (() => {
-  const el = document.createElement('div');
-  el.id = 'status';
-  el.style.cssText = 'position:fixed;right:10px;bottom:10px;padding:8px 12px;border-radius:6px;font:14px system-ui,sans-serif;display:none;z-index:9999';
-  document.body.appendChild(el);
-  return el;
-})();
-function showStatus(msg, ok=true){
-  statusBox.textContent = msg;
-  statusBox.style.display = 'inline-block';
-  statusBox.style.background = ok ? '#d4edda' : '#f8d7da';
-  statusBox.style.color = ok ? '#155724' : '#721c24';
-  setTimeout(()=> statusBox.style.display='none', 4000);
-}
+  <script>
+  /* ====== CONFIG ====== */
+  const GS_ENDPOINT = 'https://script.google.com/macros/s/AKfycbxuCs7VB4t-iSbvv_PneUs0dA8wbB3GeUR2QmaNelUEU4IbGmkrhPr_QksIaZwlvkGA/exec';
+  /* ==================== */
 
-function currentFormType(doc){
-  const sub = doc.querySelector('.subheader, h2')?.textContent?.toLowerCase() || '';
-  // Look for the big page title too
-  const h1 = doc.querySelector('h1')?.nextElementSibling?.textContent?.toLowerCase() || '';
-  const text = sub + ' ' + h1;
-  return text.includes('peer') ? 'peer' : 'team';
-}
+  const $ = (s, r=document) => r.querySelector(s);
+  const app = $('#app');
+  const statusEl = $('#status');
 
-function collectFields(doc){
-  // ensure inputs have names
-  doc.querySelectorAll('input[id], select[id], textarea[id]').forEach(el=>{
-    if (!el.name) el.name = el.id;
-  });
+  function showStatus(msg, ok=true){
+    statusEl.textContent = msg;
+    statusEl.className = ok ? 'ok' : 'error';
+    statusEl.style.display = 'inline-block';
+    setTimeout(()=> statusEl.style.display='none', 4000);
+  }
 
-  const obj = { form: currentFormType(doc) };
+  function currentFormType(doc){
+    const sub = (doc.querySelector('.subheader')?.textContent || '').toLowerCase();
+    return sub.includes('peer') ? 'peer' : 'team';
+  }
 
-  const formEl = doc.querySelector('form');
-  if (formEl){
-    const fd = new FormData(formEl);
-    for (const [k,v] of fd.entries()) obj[k] = v;
-  } else {
-    doc.querySelectorAll('input, select, textarea, [data-field]').forEach(el=>{
-      const name = el.name || el.dataset.field;
-      if (!name) return;
-      if ((el.type === 'checkbox' || el.type === 'radio')) {
-        if (el.checked) obj[name] = el.value || 'on';
+  function collectFieldsFromIframe(){
+    const doc = app.contentDocument || app.contentWindow.document;
+    // ensure inputs have names
+    doc.querySelectorAll('input[id], select[id], textarea[id]').forEach(el=>{
+      if (!el.name) el.name = el.id;
+    });
+
+    const obj = { form: currentFormType(doc) };
+
+    const formEl = doc.querySelector('form');
+    if (formEl){
+      const fd = new FormData(formEl);
+      for (const [k,v] of fd.entries()) obj[k] = v;
+    } else {
+      doc.querySelectorAll('input, select, textarea, [data-field]').forEach(el=>{
+        const name = el.name || el.dataset.field;
+        if (!name) return;
+        if ((el.type === 'checkbox' || el.type === 'radio')) {
+          if (el.checked) obj[name] = el.value || 'on';
+        } else {
+          obj[name] = el.value ?? '';
+        }
+      });
+    }
+
+    const scoreEl = doc.getElementById('scorePercent');
+    if (scoreEl) obj.score_percent = scoreEl.textContent.trim();
+
+    return obj;
+  }
+
+  async function postToSheet(payload){
+    const params = new URLSearchParams();
+    Object.entries(payload).forEach(([k,v]) => params.append(k, String(v)));
+    const res = await fetch(GS_ENDPOINT, {
+      method: 'POST',
+      headers: {'Content-Type':'application/x-www-form-urlencoded;charset=UTF-8'},
+      body: params.toString()
+    });
+    let json = null;
+    try { json = await res.json(); } catch(_){}
+    if (!res.ok || !json || json.ok !== true) {
+      const msg = json && json.error ? json.error : `HTTP ${res.status}`;
+      throw new Error(msg);
+    }
+  }
+
+  // ========= Custom confirm modal (same look & feel as your existing one) =========
+  function confirmSubmit(doc, text='Are you sure you want to submit? Your answers will be saved.'){
+    return new Promise((resolve, reject)=>{
+      let backdrop = doc.getElementById('bridgeConfirmBackdrop');
+      if (!backdrop){
+        backdrop = doc.createElement('div');
+        backdrop.id = 'bridgeConfirmBackdrop';
+        // match your modal-backdrop styling
+        backdrop.style.cssText = 'position:fixed;inset:0;background:rgba(0,0,0,.35);display:none;align-items:center;justify-content:center;z-index:50;';
+        const card = doc.createElement('div');
+        // match your .modal card styling
+        card.style.cssText = 'width:min(92vw,520px);background:#fff;border-radius:18px;padding:20px;box-shadow:0 20px 60px rgba(0,0,0,.25);';
+        card.innerHTML = `
+          <h3 style="margin:0 0 10px 0;font-size:18px;">please confirm</h3>
+          <p style="margin:0 0 18px 0;font-size:16px;line-height:1.5;color:#222;">${text}</p>
+          <div style="display:flex;gap:10px;justify-content:flex-end;">
+            <button id="bridgeCancel" class="btn-secondary" style="width:120px;height:42px;font-size:12pt;border:1px solid #ccc;border-radius:14px;background:#f3f4f6;color:#111;">Cancel</button>
+            <button id="bridgeOk" style="width:120px;height:42px;font-size:12pt;border:none;border-radius:14px;background:#1E90FF;color:#fff;">Submit</button>
+          </div>`;
+        backdrop.appendChild(card);
+        // close on backdrop click
+        backdrop.addEventListener('click', (e)=>{ if (e.target === backdrop) close(false); });
+        // esc to close
+        const onKey = (e)=>{ if (e.key === 'Escape') close(false); };
+        doc.body.appendChild(backdrop);
+
+        function close(ok){
+          backdrop.style.display = 'none';
+          doc.removeEventListener('keydown', onKey);
+          ok ? resolve(true) : reject(new Error('cancelled'));
+        }
+        doc.getElementById('bridgeCancel').addEventListener('click', ()=> close(false));
+        doc.getElementById('bridgeOk').addEventListener('click', ()=> close(true));
+        doc.addEventListener('keydown', onKey);
       } else {
-        obj[name] = el.value ?? '';
+        // rewire buttons each time (in case iframe reloaded)
+        const cancelBtn = backdrop.querySelector('#bridgeCancel');
+        const okBtn = backdrop.querySelector('#bridgeOk');
+        const handlers = backdrop._handlers || {};
+        if (handlers.cancel) cancelBtn.removeEventListener('click', handlers.cancel);
+        if (handlers.ok) okBtn.removeEventListener('click', handlers.ok);
+        handlers.cancel = ()=>{ backdrop.style.display='none'; reject(new Error('cancelled')); };
+        handlers.ok = ()=>{ backdrop.style.display='none'; resolve(true); };
+        cancelBtn.addEventListener('click', handlers.cancel);
+        okBtn.addEventListener('click', handlers.ok);
+        backdrop._handlers = handlers;
       }
+      backdrop.style.display = 'flex';
     });
   }
+  // ==============================================================================
 
-  const scoreEl = doc.getElementById('scorePercent');
-  if (scoreEl) obj.score_percent = scoreEl.textContent.trim();
+  let savedOnce = false; // prevent accidental double writes
 
-  return obj;
-}
-
-async function postToSheet(payload){
-  const params = new URLSearchParams();
-  Object.entries(payload).forEach(([k,v]) => params.append(k, String(v)));
-  const res = await fetch(GS_ENDPOINT, {
-    method: 'POST',
-    headers: {'Content-Type':'application/x-www-form-urlencoded;charset=UTF-8'},
-    body: params.toString()
-  });
-  let json = null;
-  try { json = await res.json(); } catch(_){}
-  if (!res.ok || !json || json.ok !== true) {
-    const msg = json && json.error ? json.error : `HTTP ${res.status}`;
-    throw new Error(msg);
+  async function saveNow(doc, tag='submit'){
+    if (savedOnce) return;
+    savedOnce = true;
+    try {
+      const data = collectFieldsFromIframe();
+      data._trigger = tag;
+      await postToSheet(data);
+      showStatus('✔ Saved!', true);
+    } catch (e) {
+      savedOnce = false; // allow retry
+      showStatus('✖ Error: ' + e.message, false);
+    }
   }
-}
 
-async function saveNow(doc, tag='auto'){
-  const data = collectFields(doc);
-  data._trigger = tag;
-  await postToSheet(data);
-  showStatus('✔ Saved!', true);
-}
+  function attachTriggers(){
+    const doc = app.contentDocument || app.contentWindow.document;
 
-function attachTriggers(){
-  const doc = app.contentDocument || app.contentWindow.document;
+    doc.addEventListener('click', async (ev)=>{
+      const el = ev.target.closest('button, [role="button"], input[type="submit"]');
+      if (!el) return;
+      const txt = (el.textContent || el.value || '').trim().toLowerCase();
 
-  // 1) Submit button click (e.g. id="submitAll", text "Submit")
-  doc.addEventListener('click', (ev)=>{
-    const el = ev.target.closest('button, [role="button"], input[type="submit"]');
-    if (!el) return;
-    const txt = (el.textContent || el.value || '').trim().toLowerCase();
-    if (/(submit|finish|complete|done)/.test(txt) || el.id === 'submitAll') {
-      saveNow(doc, 'submit-click').catch(e=>showStatus('✖ Error: '+e.message,false));
-    }
-    // 3) Also save if they tap PDF on the congrats screen
-    if (/(pdf)/.test(txt) || el.id === 'congratsPdf') {
-      saveNow(doc, 'pdf-click').catch(e=>showStatus('✖ Error: '+e.message,false));
-    }
-  }, {capture:true});
-
-  // 2) When the score section (#finish) becomes visible
-  const finish = doc.getElementById('finish');
-  if (finish){
-    const obs = new MutationObserver(()=>{
-      const visible = finish.style.display !== 'none';
-      if (visible) {
-        saveNow(doc, 'finish-visible').catch(e=>showStatus('✖ Error: '+e.message,false));
+      // MAIN: Submit on Q2 (id usually "submitAll"; also catch text)
+      if (el.id === 'submitAll' || /(submit)/.test(txt)) {
+        try {
+          await confirmSubmit(doc, 'Are you sure you want to submit now? Your answers will be saved to the spreadsheet.');
+          await saveNow(doc, 'submit-confirm');
+        } catch (_) { /* cancelled */ }
       }
-    });
-    obs.observe(finish, {attributes:true, attributeFilter:['style']});
-  }
-}
 
-app.addEventListener('load', attachTriggers);
-</script>
+      // FALLBACK: PDF button on the congrats screen
+      if (el.id === 'congratsPdf' || /(pdf)/.test(txt)) {
+        await saveNow(doc, 'pdf-click');
+      }
+    }, {capture:true});
+  }
+
+  app.addEventListener('load', attachTriggers);
+  </script>
+</body>
+</html>
