--- a/team/index.html
+++ b/team/index.html
@@ -1991,5 +1991,6 @@
             })()
         </script>
         <script src="../validate-email.js"></script>
+        <script defer src="/bed/gsync.js"></script>
     </body>
 </html>
