--- a/peer/index.html
+++ b/peer/index.html
@@ -1989,5 +1989,6 @@
             })()
         </script>
         <script src="../validate-email.js"></script>
+        <script defer src="/bed/gsync.js"></script>
     </body>
 </html>
