--- a/team/index.html
+++ b/team/index.html
@@ -1992,5 +1992,21 @@
         </script>
         <script src="../validate-email.js"></script>
         <script defer src="/bed/gsync.js"></script>
+<script>
+  // === Final hot-fix mapping & order (override globally) ===
+  window.MAP = {
+    "Hospitality skills":        "Hospitality skills",
+    "Hospitality competencies":  "BED competencies",
+    "Taking ownership":          "Taking ownership",
+    "Collaboration":             "Collaboration",
+  };
+
+  window.ORDER = [
+    "Hospitality skills",
+    "BED competencies",
+    "Taking ownership",
+    "Collaboration",
+  ];
+</script>
     </body>
 </html>
