--- a/team/index.html
+++ b/team/index.html
@@ -2009,5 +2009,34 @@
     "Collaboration",
   ];
 </script>
+       <script>
+(function () {
+  const emailInput = document.querySelector('#email, #teamEmail, #peerEmail, input[name="email"], input[type="email"]');
+  const form = emailInput ? (emailInput.closest('form') || document.querySelector('form')) : null;
+  if (!emailInput || !form) return;
+
+  const re = /^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/i;
+
+  function validate() {
+    const v = (emailInput.value || '').trim();
+    if (!re.test(v)) {
+      emailInput.setCustomValidity('Please enter a valid email address.');
+    } else {
+      emailInput.setCustomValidity('');
+    }
+  }
+
+  emailInput.addEventListener('input', validate);
+  form.addEventListener('submit', function (e) {
+    validate();
+    if (!form.checkValidity()) {
+      e.preventDefault();
+      if (form.reportValidity) form.reportValidity();
+      emailInput.focus();
+    }
+  });
+})();
+</script>
+ 
     </body>
 </html>
