--- a/peer/index.html
+++ b/peer/index.html
@@ -606,7 +606,6 @@
     type="email" 
     required 
     autocomplete="email" 
-    inputmode="email"  
   />
 </div>
                 <div class="row">
@@ -2006,5 +2005,34 @@
     "Collaboration",
   ];
 </script>
+      <script>
+(function () {
+  const emailInput = document.querySelector('#email, #teamEmail, #peerEmail, input[name="email"], input[type="email"]');
+  const form = emailInput ? (emailInput.closest('form') || document.querySelector('form')) : null;
+  if (!emailInput || !form) return;
+
+  const re = /^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/i;
+
+  function validate() {
+    const v = (emailInput.value || '').trim();
+    if (!re.test(v)) {
+      emailInput.setCustomValidity('Please enter a valid email address.');
+    } else {
+      emailInput.setCustomValidity('');
+    }
+  }
+
+  emailInput.addEventListener('input', validate);
+  form.addEventListener('submit', function (e) {
+    validate();
+    if (!form.checkValidity()) {
+      e.preventDefault();
+      if (form.reportValidity) form.reportValidity();
+      emailInput.focus();
+    }
+  });
+})();
+</script>
+  
     </body>
 </html>
