--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <iframe id="formFrame" src="" referrerpolicy="no-referrer"></iframe>
 
   <script>
-  const WEB_APP_URL = 'PASTE_YOUR_APPS_SCRIPT_WEB_APP_URL_HERE';
+  const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbz0ajD4RXhjsLhKKrWM8pbw3NDMJKYKhwCuNcA54fSxUknez9dPnr6WSHZDwSnzzIfl/exec';
 
   const qs  = (doc, s) => doc.querySelector(s);
   const txt = (el) => el ? (('value' in el) ? String(el.value).trim() : String(el.textContent).trim()) : '';
